2008-02-01  Christian Persch  <chpe@gnome.org>

	* src/backend/debug.h: Use G_STRFUNC instead of the deprecated
	G_GNUC_PRETTY_FUNCTION.

2008-01-31  Bastien Nocera  <hadess@hadess.net>

	* src/totem-resources.c: (time_monitor):
	more typo fixing by Wouter Bron <wousser@gmail.com>
	(Closes: #513125)

2008-01-31  Philip Withnall  <pwithnall@svn.gnome.org>

	* src/plugins/totem-python-module.c:
	(totem_python_module_finalize): Protect finalisation
	of plugins which haven't loaded properly. (Closes: #513467)

2008-01-30  Bastien Nocera  <hadess@hadess.net>

	* src/totem-video-thumbnailer.c: (save_pixbuf),
	(capture_interesting_frame), (main): Fix typos in the
	(untranslated) error messages, patch from Wouter Bron
	<wousser@gmail.com> (Closes: #513125)

2008-01-30  Bastien Nocera  <hadess@hadess.net>

	* bindings/vala/totem.vapi:
	* configure.in: Fix compilation with vala 0.1.6, spotted
	by Götz Waschk <waschk@mandriva.org> (Closes: #512920)

2008-01-27  Philip Withnall  <pwithnall@svn.gnome.org>

	* src/plugins/tracker/totem-tracker-widget.c:
	(totem_tracker_widget_class_init), (populate_result),
	(get_search_count), (search_results_cb), (do_search), (go_next),
	(go_previous), (page_selector_value_changed_cb), (new_search),
	(init_result_list), (initialize_list_store),
	(totem_tracker_widget_init), (totem_tracker_widget_new):
	* src/plugins/tracker/totem-tracker.c: (impl_activate):
	* src/plugins/tracker/tracker.totem-plugin.in: HIGify the Tracker
	plugin, following suggestions made by Kirk Bridger. (Closes: #512268)

2008-01-26  Philip Withnall  <pwithnall@svn.gnome.org>

	Update svn:ignore properties.

============ Version 2.21.91

2008-01-25  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.21.91

2008-01-25  Bastien Nocera  <hadess@hadess.net>

	* data/totem.schemas.in:
	* data/totem.ui:
	* src/plugins/screensaver/totem-screensaver.c:
	(totem_screensaver_update_from_state),
	(lock_screensaver_on_audio_changed_cb), (impl_activate),